--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
 
       <h3>Transações</h3>
       
-      <ul id="transactions" class="transactions">
-        <!-- <li class="minus">
-          Salário <span>-$400</span><button class="delete-btn">x</button>
-        </li> -->
-      </ul>
+      <ul id="transactions" class="transactions"></ul>
 
       <h3>Adicionar transação</h3>
       
@@ -55,6 +51,6 @@
       </form>
     </section>
 
-    <script src="./src/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
